--- a/environment.yaml
+++ b/environment.yaml
@@ -25,6 +25,7 @@ dependencies:
   - crashtest=0.4.1=pyhd8ed1ab_0
   - cryptography=39.0.2=py38h3d167d9_0
   - dbus=1.13.6=h5008d03_3
+  - decorator=5.1.1=pyhd8ed1ab_0
   - distlib=0.3.6=pyhd8ed1ab_0
   - ensureconda=1.4.3=pyhd8ed1ab_0
   - exceptiongroup=1.1.1=pyhd8ed1ab_0
@@ -53,7 +54,9 @@ dependencies:
   - libuuid=2.32.1=h7f98852_1000
   - libzlib=1.2.13=h166bdaf_4
   - lockfile=0.12.2=py_1
+  - markdown-it-py=2.2.0=pyhd8ed1ab_0
   - markupsafe=2.1.2=py38h1de0b5d_0
+  - mdurl=0.1.0=pyhd8ed1ab_0
   - more-itertools=9.1.0=pyhd8ed1ab_0
   - msgpack-python=1.0.5=py38hfbd4bf9_0
   - ncurses=6.3=h27087fc_1
@@ -67,6 +70,7 @@ dependencies:
   - platformdirs=3.1.1=pyhd8ed1ab_0
   - pycparser=2.21=pyhd8ed1ab_0
   - pydantic=1.10.7=py38h1de0b5d_0
+  - pygments=2.14.0=pyhd8ed1ab_0
   - pylev=1.4.0=pyhd8ed1ab_0
   - pyopenssl=23.0.0=pyhd8ed1ab_0
   - pysocks=1.7.1=pyha2e5f31_6
@@ -76,6 +80,7 @@ dependencies:
   - pyyaml=6.0=py38h0a891b7_5
   - readline=8.2=h8228510_1
   - requests=2.28.2=pyhd8ed1ab_0
+  - rich=13.3.3=pyhd8ed1ab_0
   - ruamel.yaml=0.17.21=py38h1de0b5d_3
   - ruamel.yaml.clib=0.2.7=py38h1de0b5d_1
   - secretstorage=3.3.3=py38h578d9bd_1
@@ -95,6 +100,7 @@ dependencies:
   - typing-extensions=4.5.0=hd8ed1ab_0
   - typing_extensions=4.5.0=pyha770c72_0
   - urllib3=1.26.15=pyhd8ed1ab_0
+  - validators=0.20.0=pyhd8ed1ab_0
   - virtualenv=20.21.0=pyhd8ed1ab_0
   - webdriver-manager=3.8.5=pyhd8ed1ab_0
   - webencodings=0.5.1=py_1
